# 48scheme

./: .nvimrc  48scheme.cabal  LICENSE  README.md  stack.yaml
src/: Main.hs
