name:                48scheme
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bzf/48scheme#readme
license:             BSD3
license-file:        LICENSE
author:              André Ligné
maintainer:          andre.ligne@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 48scheme
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, parsec
